--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/src/)
 find_package(Eigen3 REQUIRED)
 
 find_package(MUQ REQUIRED)
+message(${MUQ_INCLUDE_DIRS})
 target_link_libraries(main ${MUQ_LIBRARIES} ${MUQ_LINK_LIBRARIES})
 include_directories(${MUQ_INCLUDE_DIRS})
 
@@ -35,3 +36,4 @@ find_package(yaml-cpp REQUIRED)
 target_link_libraries(main ${YAML_CPP_LIBRARIES})
 include_directories(${YAML_CPP_INCLUDE_DIR})
 
+find_package(Boost COMPONENTS system filesystem graph)
