--- a/example/example.yaml
+++ b/example/example.yaml
@@ -2,7 +2,7 @@ SeisSolBinary:          "SeisSol_Release_dhsw_6_elastic"
 ParametersFile:         "parameters.par"
 
 MaterialFileTemplate:   "material_template.yaml"
-MaterialParameters:
+InitialParameters:
   param_1: 5.21
   param_2: 9.26
   param_3: 1.53
