Refactor example  - Simple halfspace with free surface and homogeneous material,  - Kinematic source  - Five (partly randomly) placed receivers  - Three meshes with different resolution  - Observation calculated with medium sized mesh, will be updated later

--- a/example/material_template.yaml
+++ b/example/material_template.yaml
@@ -1,5 +1,5 @@
 !ConstantMap
 map:
-  rho:    @param_1@
-  mu:     @param_2@
-  lambda: @param_3@
+  rho:    @param_rho@
+  mu:     @param_mu@
+  lambda: @param_lambda@
