--- a/example/uq.yaml
+++ b/example/uq.yaml
@@ -3,10 +3,10 @@ ParametersFile:         "parameters.par"
 
 MaterialFileTemplate:   "material_template.yaml"
 InitialParameters:
-  param_1: 5.21
-  param_2: 9.26
-  param_3: 1.53
+  param_rho:    2.0e3
+  param_mu:     1.0e10
+  param_lambda: 2.0e10
 
 ObservationDirectory:   "observations"
-ReceiverPrefix:         "tpv5-receiver"
+ReceiverPrefix:         "output-receiver"
 NumberOfReceivers:      5
