Make number of mpiexec processes be configurable

--- a/example/uq.yaml
+++ b/example/uq.yaml
@@ -1,5 +1,6 @@
 SeisSolBinary:          "SeisSol_Release_dhsw_6_elastic"
 ParametersFile:         "parameters.par"
+NumberOfProcesses:      28
 
 MaterialFileTemplate:   "material_template.yaml"
 InitialParameters:
