Make number of samples a parameter

--- a/example/uq.yaml
+++ b/example/uq.yaml
@@ -10,3 +10,4 @@ InitialParameters:
 ObservationDirectory:   "observations"
 ReceiverPrefix:         "output-receiver"
 NumberOfReceivers:      5
+NumberOfSamples:        10
