--- a/example/uq.yaml
+++ b/example/uq.yaml
@@ -10,4 +10,4 @@ InitialParameters:
 ObservationDirectory:   "observations"
 ReceiverPrefix:         "output-receiver"
 NumberOfReceivers:      5
-NumberOfSamples:        500
+NumberOfSamples:        [20, 5]
