--- a/example/material_exact.yaml
+++ b/example/material_exact.yaml
@@ -1,6 +1,20 @@
-!ConstantMap
-  map:
-    #wavespeeds are 2000 and 4000 m/s
-    rho:    2600.0
-    mu:     1.04e10
-    lambda: 2.08e10
+!Any
+components:
+  - !GroupFilter
+    groups: 1
+    components: !ConstantMap
+      map:
+        rho:    2600.0
+        mu:     1.04e10
+        lambda: 2.08e10
+        Qp:     40.0
+        Qs:     120.0
+  - !GroupFilter
+    groups: 2
+    components: !ConstantMap
+      map:
+        rho:    2700.0
+        mu:     3.23980992e10
+        lambda: 3.24038016e10
+        Qp:     69.3
+        Qs:     155.9
