--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,4 +43,4 @@ jobs:
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
-          cmake --build . --config $BUILD_TYPE
+          cmake --build .
