Test multilevel setup (#29)
* Test multilevel setup

* Use 0 padding for chain backup

* Make multiindex setup configurable

* Use correct identifier for sprintf

* Size buffers correctly

* Analysis script + parameter file, which gives useful results

* Make runCount static again

* Include HDF5 and MPI in CMakeLists

* Add openmpi to github pipeline

* Remove --config from pipeline

* Link io lib with yaml

* Check if ALL_WARNINGS still works

* Revert "Check if ALL_WARNINGS still works"

This reverts commit 2bee1a8e7ad9d4cc02f94090e3202eadcd040335.

Co-authored-by: Radu Raicea <radu.raicea@tum.de>

--- a/example/uq.yaml
+++ b/example/uq.yaml
@@ -12,6 +12,6 @@ InitialParameters:
 
 ObservationDirectory:   "observations"
 ReceiverPrefix:         "output-receiver"
-NumberOfReceivers:      9
-NumberOfSamples:        500
+NumberOfReceivers:      5
+NumberOfSamples:        [200, 20]
 NumberOfSubintervals:   5
