Added numberOfFusedSims to parameter file and forward it to LogDensity()

--- a/rapidTesting/uq.yaml
+++ b/rapidTesting/uq.yaml
@@ -10,3 +10,4 @@ ReceiverPrefix:         "output-receiver"
 NumberOfReceivers:      6
 NumberOfSamples:        [50]
 NumberOfSubintervals:   1
+NumberOfFusedSims:      4
