Added OpenMP to CMakeList and adjusted source_template to fused sim

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,10 @@ target_link_libraries(main PUBLIC uq)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/src/)
 
+find_package(OpenMP REQUIRED)
+target_link_libraries(uq PRIVATE OpenMP::OpenMP_CXX)
+target_link_libraries(main PRIVATE OpenMP::OpenMP_CXX)
+
 find_package(Eigen3 REQUIRED)
 target_include_directories(io SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 target_include_directories(uq SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
