rapid testing update

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,8 @@ build/*
 settings.json
 example/output/*
 example/source/source.nrf
+rapidTesting/output/*
+SeisSol_stdout.txt
+SeisSol_stderr.txt
 *.h5
 
