--- a/rapidTesting/uq.yaml
+++ b/rapidTesting/uq.yaml
@@ -1,15 +1,15 @@
 SeisSolBinary:          "SeisSol_Release_dhsw_6_elastic"
 ParametersFile:         "parameters.par"
 
-MaterialFileTemplate:   "source/source_template.dat"
+ChainFileTemplate:   "source/source_template.dat"
 InitialParameters:
   param_source_z:  [2000, 40000]
   param_source_y:  [ 0.0, 40000]
   param_source_x:  [ 0.0, 40000]
 
-ObservationDirectory:   "observations"
+ObservationDirectory:   "observations-short"
 ReceiverPrefix:         "output-receiver"
 NumberOfReceivers:      6
 NumberOfSamples:        [140]
 NumberOfSubintervals:   1
-NumberOfFusedSims:      8
+NumberOfFusedSims:      4
