--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,11 @@ target_include_directories(io SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 target_include_directories(uq SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 target_include_directories(seissol SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 
+find_package(Boost COMPONENTS system filesystem graph)
+target_include_directories(io SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(uq SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
+target_link_libraries(main PUBLIC ${Boost_LIBRARIES})
+
 find_package(MPI REQUIRED)
 target_include_directories(io SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
 target_include_directories(main SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
@@ -53,7 +58,5 @@ find_package(yaml-cpp REQUIRED)
 target_link_libraries(io PUBLIC yaml-cpp)
 target_link_libraries(uq PUBLIC yaml-cpp)
 
-find_package(Boost COMPONENTS system filesystem graph)
-target_include_directories(io SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
 find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(io PUBLIC spdlog::spdlog)
