Replace boost::filesystem with std::filesystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,10 @@ add_library(uq
   src/UQ/MIInterpolation.cpp
   src/UQ/SamplingProblem.cpp)
 
-add_executable(main src/main.cpp)
+add_executable(UQ-Runner src/main.cpp)
 target_link_libraries(seissol PUBLIC io)
-target_link_libraries(main PUBLIC seissol)
-target_link_libraries(main PUBLIC uq)
+target_link_libraries(UQ-Runner PUBLIC seissol)
+target_link_libraries(UQ-Runner PUBLIC uq)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/src/)
 
@@ -33,24 +33,24 @@ target_include_directories(io SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 target_include_directories(uq SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 target_include_directories(seissol SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
 
-find_package(Boost COMPONENTS system filesystem graph)
+find_package(Boost COMPONENTS filesystem system graph)
 target_include_directories(io SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(uq SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
-target_link_libraries(main PUBLIC ${Boost_LIBRARIES})
+target_link_libraries(UQ-Runner PUBLIC ${Boost_LIBRARIES})
 
 find_package(MPI REQUIRED)
 target_include_directories(io SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
-target_include_directories(main SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
+target_include_directories(UQ-Runner SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
 target_include_directories(seissol SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
 target_include_directories(uq SYSTEM PUBLIC ${MPI_CXX_INCLUDE_PATH})
-target_link_libraries(main PUBLIC MPI::MPI_C)
+target_link_libraries(UQ-Runner PUBLIC MPI::MPI_C)
 
 find_package(HDF5 REQUIRED)
-target_link_libraries(main PUBLIC ${HDF5_LIBRARIES} ${HDF5_LINK_LIBRARIES})
-target_include_directories(main SYSTEM PUBLIC ${HDF5_INCLUDE_DIRS})
+target_link_libraries(UQ-Runner PUBLIC ${HDF5_LIBRARIES} ${HDF5_LINK_LIBRARIES})
+target_include_directories(UQ-Runner SYSTEM PUBLIC ${HDF5_INCLUDE_DIRS})
 
 find_package(MUQ REQUIRED)
-target_link_libraries(main PUBLIC ${MUQ_LIBRARIES} ${MUQ_LINK_LIBRARIES})
+target_link_libraries(UQ-Runner PUBLIC ${MUQ_LIBRARIES} ${MUQ_LINK_LIBRARIES})
 message(${MUQ_INCLUDE_DIRS})
 target_include_directories(uq SYSTEM PUBLIC ${MUQ_INCLUDE_DIRS})
 
